[project]
name = "pytezos"
version = "3.18.0"
description = "Python toolkit for Tezos"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Michael Zaikin", email = "mz@baking-bad.org" },
    { name = "Lev Gorodetskii", email = "pytezos@drsr.io" },
    { name = "Igor Sereda", email = "sereda.igor.s@gmail.com" },
    { name = "Arthur Breitman" },
    { name = "Roman Serikov" },
]
maintainers = [
    { name = "Baking Bad team", email = "hello@baking-bad.org" },
]
keywords = [
    "tezos",
    "blockchain",
    "sdk",
    "michelson",
    "repl",
    "cryptocurrencies",
    "smart-contracts",
    "jupyter",
    "ipython",
    "docker",
    "crypto",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "attrs>=21.4.0",
    "base58>=2.1.1",
    "cattrs>=22.1.0",
    "click>=8.1.3",
    "coincurve>=20.0.0",
    "cryptography>=42.0.4",
    "deprecation>=2.1.0",
    "docker>=6.0.0",
    "fastecdsa>=2.2.3",
    "jsonschema>=4.3.2",
    "mnemonic>=0.21",
    "netstruct>=1.1.2",
    "ply>=3.11",
    "py-ecc==7.0.1",
    "pysodium>=0.7.10",
    "python-dateutil>=2.8.2",
    "requests>=2.28.2",
    "simple-bson>=0.0.3",
    "simplejson>=3.17.6",
    "strict-rfc3339>=0.7",
    "tabulate>=0.9.0",
    "testcontainers>=3.7.0",
    "tqdm>=4.62.3",
]

[project.urls]
homepage = "https://pytezos.org"
repository = "https://github.com/baking-bad/pytezos"

[project.scripts]
pytezos = "pytezos.cli.cli:cli"
michelson-kernel = "michelson_kernel.cli:cli"

[project.optional-dependencies]
jupyter = [
    "ipykernel>=6",
    "jupyter-client>=7",
    "notebook>=7,<8",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "diff-cover>=10.2.0",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "parameterized>=0.9.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.13",
    "sphinx>=8.1.3",
    "sphinx-click>=6.2.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-sitemap>=2.9.0",
    "sphinxcontrib-googleanalytics>=0.5",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
    "types-setuptools>=82.0.0.20260518",
    "types-simplejson>=3.20.0.20260518",
    "types-tabulate>=0.10.0.20260508",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytezos", "src/michelson_kernel"]

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 120
lint.ignore = [
    "B904",
    "C417",
    "C901",
    "E402",
    "E713",
    "E721",
    "E741",
    "F401",
    "F403",
    "F405",
    "F541",
    "F811",
    "F821",
    "F841",
    "RET504",
    "RET505",
    "RET506",
    "RET507",
    "SIM102",
    "SIM108",
    "SIM114",
]
lint.extend-select = ["B", "C", "RET", "SIM"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
